added counter for https & resources

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "version": "1.0",
     "description": "Uses the network api",
     "devtools_page": "devtools.html",
+    "permissions": ["tabCapture", "tabs"],
     "minimum_chrome_version": "10.0",
     "manifest_version": 2
 }
